# schismatic

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pythontest.yml
schismatic/: __init__.py  geom.py  gr3.py  output.py  quadtree.py  vgrid.py
tests/: test_geom.py
